# comprehensive-rust-worked-examples

./: Cargo.toml
_10_6_exercise_elevator_events/: Cargo.toml
_10_6_exercise_elevator_events/src/: main.rs
_12_4_exercise_expression_evaluation/: Cargo.toml
_12_4_exercise_expression_evaluation/src/: lib.rs
_13_4_exercise_generic_logger/: Cargo.toml
_13_4_exercise_generic_logger/src/: main.rs
_14_5_exercise_generic_min/: Cargo.toml
_14_5_exercise_generic_min/src/: main.rs
_16_8_exercise_counter/: Cargo.toml
_16_8_exercise_counter/src/: main.rs
_17_8_exercise_rot13/: Cargo.toml
_17_8_exercise_rot13/src/: main.rs
_19_8_exercise_builder_type/: Cargo.toml
_19_8_exercise_builder_type/src/: main.rs
_20_4_exercise_binary_tree/: Cargo.toml
_20_4_exercise_binary_tree/src/: lib.rs
_22_4_exercise_health_statistics/: Cargo.toml
_22_4_exercise_health_statistics/src/: main.rs
_23_6_exercise_protobuf_parsing/: Cargo.toml
_23_6_exercise_protobuf_parsing/src/: main.rs
_25_1_iterator/: Cargo.toml
_25_1_iterator/src/: main.rs
_25_2_into_iterator/: Cargo.toml
_25_3_from_iterator/: Cargo.toml
_25_4_exercise_iterator_method_chaining/: Cargo.toml
_26_5_exercise_modules_for_a_gui_library/: Cargo.toml
_27_3_compiler_lints_and_clippy/: Cargo.toml
_27_4_exercise_luhn_algorithm/: Cargo.toml
_29_3_try_operator/: Cargo.toml
_29_8_exercise_rewriting_with_result/: Cargo.toml
_5_7_exercise_fibonacci/: Cargo.toml
_6_7_exercise_collatz_sequence/: Cargo.toml
_8_4_exercise_nested_arrays/: Cargo.toml
_9_3_exercise_geometry/: Cargo.toml
(+12 files in other folders)
