[workspace]
resolver = "2"
members = [
  "_10_6_exercise_elevator_events",
  "_12_4_exercise_expression_evaluation",
  "_13_4_exercise_generic_logger",
  "_14_5_exercise_generic_min",
  "_16_8_exercise_counter",
  "_17_8_exercise_rot13",
  "_19_8_exercise_builder_type",
  "_20_4_exercise_binary_tree",
  "_22_4_exercise_health_statistics",
  "_23_6_exercise_protobuf_parsing",
  "_25_1_iterator", "_25_2_into_iterator", "_25_3_from_iterator", "_25_4_exercise_iterator_method_chaining", "_26_5_exercise_modules_for_a_gui_library",
  "_5_7_exercise_fibonacci",
  "_6_7_exercise_collatz_sequence",
  "_8_4_exercise_nested_arrays",
  "_9_3_exercise_geometry",
  "state_machine_example",
]
